[package]
name = "teapot"
version = "0.0.1"

[dependencies]
glium = { path = "glium" }
#clock_ticks = "0.1.0"
cgmath = "0.7"
genmesh = "0.4"
#image = "0.4.0"
obj = { version = "0.5", features = ["usegenmesh"] }
rand = "0.3"
glutin = { path = "glutin" }

[replace]
"backtrace:0.2.3" = { path = 'backtrace-rs' }

